force-app/main/default/objects/Program_Membership__c/Program_Membership__c.object-meta.xml
<CustomObject>
    <label>Program Membership</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Program Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>