force-app/main/default/objects/Program_Membership__c/fields/BHA_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>BHA_Survey_ID__c</fullName>
    <description>Qualtrics Survey ID of the BHA survey used by the Program</description>
    <formula>Program__r.BHA_Survey_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BHA Survey ID</label>
    <type>Text</type>
</CustomField>