force-app/main/default/objects/Program_Membership__c/fields/BHA_Survey_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>BHA_Survey_Response_ID__c</fullName>
    <description>The Qualtrics ID of the survey response for BHA survey that the contact took.</description>
    <label>BHA Survey Response ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>