force-app/main/default/objects/Program_Membership__c/fields/btnDisabled__c.field-meta.xml
<CustomField>
    <fullName>btnDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>btnDisabled</label>
    <type>Checkbox</type>
</CustomField>