force-app/main/default/objects/Program_Membership__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <description>The current year. Used in email template.</description>
    <formula>TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <type>Text</type>
</CustomField>