force-app/main/default/objects/Program_Membership__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cohorts and Programs</relationshipLabel>
    <relationshipName>Program_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>