force-app/main/default/objects/Program_Membership__c/fields/Member_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Business_Name__c</fullName>
    <formula>Individual__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Business Name</label>
    <type>Text</type>
</CustomField>