force-app/main/default/objects/Program_Membership__c/fields/Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_First_Name__c</fullName>
    <description>The entrepreneur&apos;s first name</description>
    <formula>Individual__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member First Name</label>
    <type>Text</type>
</CustomField>