force-app/main/default/objects/Program_Membership__c/fields/Member_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Last_Name__c</fullName>
    <description>The program member&apos;s last name</description>
    <formula>Individual__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Last Name</label>
    <type>Text</type>
</CustomField>