force-app/main/default/objects/Program_Membership__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <label>Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RESILI Account Created</fullName>
            </value>
            <value>
                <fullName>BHA Completed</fullName>
            </value>
            <value>
                <fullName>Post-Coaching Survey Completed</fullName>
            </value>
            <value>
                <fullName>1-Year Survey Completed</fullName>
            </value>
            <value>
                <fullName>2-Year Survey Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>