force-app/main/default/objects/Program_Membership__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Individual__r.FirstName + &apos; &apos; + Individual__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>