force-app/main/default/objects/Program_Membership__c/fields/Post_Coaching_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_Coaching_Survey_ID__c</fullName>
    <description>The post-coaching survey id from the parent program</description>
    <formula>Program__r.Post_Coaching_Survey_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post-Coaching Survey ID</label>
    <type>Text</type>
</CustomField>