force-app/main/default/objects/Program_Membership__c/fields/Post_Coaching_Survey_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_Coaching_Survey_Response_ID__c</fullName>
    <description>The qualtrics id of the response to the post coaching survey completed by the program member.</description>
    <label>Post-Coaching Survey Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>