force-app/main/default/objects/Program_Membership__c/fields/Program_Members__c.field-meta.xml
<CustomField>
    <fullName>Program_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zCohort(DEP)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Business Memberships</relationshipLabel>
    <relationshipName>Program_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>